fixed the left align

--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -6,9 +6,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding: 0 25px;
-  margin: 20px auto;
+  margin: 50px auto;
   max-width: 900px;
 }
 
